force-app/main/default/objects/NRV10RemunerationRate__c/NRV10RemunerationRate__c.object-meta.xml
<CustomObject>
    <description>Le taux de commissionnement permet de regrouper l&apos;ensemble des enregistrements représentant soit :
 - des taux de commissionnement de vente
 - des coefficients de décote
 - des taux de commissionnement d&apos;équipe
 - des bonus
 - des malus</description>
    <label>Taux de rémunération</label>
    <nameField>
        <displayFormat>TR/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taux de rémunérations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>