force-app/main/default/objects/NRV10RemunerationRate__c/fields/bonusAmount__c.field-meta.xml
<CustomField>
    <fullName>bonusAmount__c</fullName>
    <label>Montant bonus/malus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>