force-app/main/default/objects/NRV10RemunerationRate__c/fields/discountCoefficient__c.field-meta.xml
<CustomField>
    <fullName>discountCoefficient__c</fullName>
    <label>Coefficient de décote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>