force-app/main/default/objects/NRV10RemunerationRate__c/fields/financingMethod__c.field-meta.xml
<CustomField>
    <fullName>financingMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lien vers le moyen de paiement auquel ce taux de rémunération se rapporte.</description>
    <label>Moyen de financement</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 AND (3 OR 4))</booleanFilter>
        <filterItems>
            <field>Referencial__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Mode de financement</value>
        </filterItems>
        <filterItems>
            <field>Referencial__c.startDate__c</field>
            <operation>lessOrEqual</operation>
            <valueField>$Source.startDate__c</valueField>
        </filterItems>
        <filterItems>
            <field>Referencial__c.endDate__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Referencial__c.endDate__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>$Source.endDate__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Taux de rémunérations</relationshipLabel>
    <relationshipName>Taux_de_r_mun_rations</relationshipName>
    <type>Lookup</type>
</CustomField>