force-app/main/default/objects/NRV10RemunerationRate__c/fields/gridRevision__c.field-meta.xml
<CustomField>
    <fullName>gridRevision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grille</label>
    <referenceTo>NRV10GridRevision__c</referenceTo>
    <relationshipLabel>Taux de rémunération</relationshipLabel>
    <relationshipName>Taux_de_remunerations</relationshipName>
    <type>Lookup</type>
</CustomField>