force-app/main/default/objects/NRV10RemunerationRate__c/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <label>Taux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>