force-app/main/default/objects/NRV10RemunerationRate__c/fields/ratingDifference__c.field-meta.xml
<CustomField>
    <fullName>ratingDifference__c</fullName>
    <label>Plancher %EC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>