force-app/main/default/objects/NRV10RemunerationRate__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>