force-app/main/default/objects/NRV10RemunerationRate__c/fields/turnoverLevel__c.field-meta.xml
<CustomField>
    <fullName>turnoverLevel__c</fullName>
    <label>Pallier CA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>