force-app/main/default/objects/NRV10RemunerationRate__c/recordTypes/bonus.recordType-meta.xml
<RecordType>
    <fullName>bonus</fullName>
    <active>true</active>
    <label>Taux de Bonus</label>
</RecordType>