force-app/main/default/objects/NRV10RemunerationRate__c/recordTypes/discountCommission.recordType-meta.xml
<RecordType>
    <fullName>discountCommission</fullName>
    <active>true</active>
    <label>Taux de Decote</label>
</RecordType>