force-app/main/default/objects/NRV10RemunerationRate__c/recordTypes/malus.recordType-meta.xml
<RecordType>
    <fullName>malus</fullName>
    <active>true</active>
    <label>Taux de Malus</label>
</RecordType>