force-app/main/default/objects/NRV10RemunerationRate__c/recordTypes/saleCommission.recordType-meta.xml
<RecordType>
    <fullName>saleCommission</fullName>
    <active>true</active>
    <label>Taux de Commission vendeur</label>
</RecordType>