force-app/main/default/objects/NRV10RemunerationRate__c/recordTypes/teamCommission.recordType-meta.xml
<RecordType>
    <fullName>teamCommission</fullName>
    <active>true</active>
    <label>Taux de Commission equipe</label>
</RecordType>