force-app/main/default/objects/NRV10RemunerationRate__c/validationRules/VR_K3_RemunerationRate_DateDeFin.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_RemunerationRate_DateDeFin</fullName>
    <active>true</active>
    <description>Vérifier que la date de fin est supérieure ou égale à la date de début.</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, endDate__c &lt; startDate__c)</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>La date de fin doit être supérieure ou égale à la date de début.</errorMessage>
</ValidationRule>