force-app/main/default/objects/NRV10RemunerationRate__c/validationRules/VR_K3_RemunerationRate_MalusIsNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_RemunerationRate_MalusIsNegative</fullName>
    <active>true</active>
    <description>Le montant ou taux de malus doit être négatif</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;malus&quot;, OR(AND(NOT(ISBLANK(bonusAmount__c)), bonusAmount__c &gt; 0), AND(NOT(ISBLANK(rate__c)),rate__c &gt; 0)))</errorConditionFormula>
    <errorDisplayField>bonusAmount__c</errorDisplayField>
    <errorMessage>Le montant ou le taux de malus doit être négatif.</errorMessage>
</ValidationRule>