force-app/main/default/objects/NRV10RemunerationRate__c/validationRules/VR_K3_RemunerationRate_MalusTauxMontant.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_RemunerationRate_MalusTauxMontant</fullName>
    <active>true</active>
    <description>Seul. l&apos;un des deux champs peut être renseigné</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;malus&quot;,  NOT(ISBLANK(rate__c)), NOT(ISBLANK(bonusAmount__c)))</errorConditionFormula>
    <errorDisplayField>bonusAmount__c</errorDisplayField>
    <errorMessage>Vous ne pouvez pas saisir à la fois un taux et un montant, veuillez ne conserver que l&apos;un des deux avant de valider à nouveau votre formulaire.</errorMessage>
</ValidationRule>