force-app/main/default/objects/NRV10RemunerationRate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>discountCoefficient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>bonusAmount__c</columns>
    <columns>financingMethod__c</columns>
    <columns>turnoverLevel__c</columns>
    <columns>ratingDifference__c</columns>
    <columns>rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>