force-app/main/default/objects/NRV10RemunerationRate__c/listViews/Co_fficients_de_d_cote.listView-meta.xml
<ListView>
    <fullName>Co_fficients_de_d_cote</fullName>
    <columns>gridRevision__c</columns>
    <columns>NAME</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>ratingDifference__c</columns>
    <columns>discountCoefficient__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10RemunerationRate__c.discountCommission</value>
    </filters>
    <label>Coéfficients de décote</label>
</ListView>