force-app/main/default/objects/NRV10RemunerationRate__c/listViews/Taux_de_r_mun_ration_vendeur.listView-meta.xml
<ListView>
    <fullName>Taux_de_r_mun_ration_vendeur</fullName>
    <columns>NAME</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10RemunerationRate__c.saleCommission</value>
    </filters>
    <label>01 - Taux de rémunération vendeur</label>
</ListView>